--- a/expression.mdx
+++ b/expression.mdx
@@ -368,7 +368,7 @@ and ask Chalk to compute their values.
 Consider this `User` and `Transaction` model, which would be checked in to the code:
 
 ```python
-from chalk.features import _, features, DataFrame
+from chalk.features import features, DataFrame
 
 @features
 class Transaction:
