--- a/best-practices.mdx
+++ b/best-practices.mdx
@@ -187,7 +187,7 @@ chalk query \
   --out user.denylisted \
   --out user.credit_report.flags \
   --staleness user.credit_report.flags=30d \
-  --tags team:fraud
+  --tag team:fraud
 ```
 
 This feature is also accessible in all of our API clients through the `query_name` parameter.
