--- a/feature-caching.mdx
+++ b/feature-caching.mdx
@@ -279,7 +279,7 @@ lru_cache_config = OnlineStoreConfig(
     lru_cache=LRUCache(
         max_size=10000,
         ttl="60s",
-        cache_misses=True,,
+        store_cache_misses=True,
     )
 )
 
