--- a/named-query.mdx
+++ b/named-query.mdx
@@ -72,7 +72,7 @@ ChalkClient().query(
 )
 ```
 
-You can also run a named queries offline, provided that all outputs have offline resolvers.
+You can also run a named query offline, provided that all outputs have offline resolvers.
 
 ```python
 from chalk.client import ChalkClient
