--- a/configuration.mdx
+++ b/configuration.mdx
@@ -273,6 +273,8 @@ validation:
         missing: error
 ```
 
+##
+
 ---
 
 ## .chalkignore
@@ -281,13 +283,12 @@ your deployment should be added so that non-deployment code does not clutter or 
 
 ---
 
-## Specifying Python Requirements
+## Python Requirements
 
-Chalk will use install the Python requirements for your project as specified in the `requirements`
+Chalk will install the Python requirements for your project as specified in the `requirements`
 parameter of your `chalk.yaml` file. This can either be a `requirements.txt` file or a `pyproject.toml`.
 Chalk supports both `Poetry` and `uv` for managing your Python dependencies.
-You can specify this file's location
-and type in your `chalk.yaml` file like below: 
+You can specify this file's location and type in your `chalk.yaml` file like below:
 
 ```yaml 
 project: my-project-id
@@ -298,6 +299,93 @@ environments:
     requirements: requirements-dev.txt
   prod:
     requirements: pyproject.yaml
+```
+
+### Python Requirement Overrides
+
+The requirements file specified in your `chalk.yaml` file will serve as the default dependency set for
+your environment. However, if you have different requirements for specific resolvers, you can also
+define alternative virtual environments under the `venvs` key in your `chalk.yaml` file.
+
+```yaml
+project: features
+
+environments:
+    default:
+        runtime: python311
+        requirements: ./requirements.txt
+        platform_version: v3.26.8
+
+venvs:
+    model-1:
+      dependencies:
+        - art
+    model-2:
+      requirements: ./requirements-model-2.txt
+```
+
+For each virtual environment, you can specify the associated dependencies either by passing in a list of Python
+requirements under the `dependencies` key, or by providing a filepath to a `requirements.txt` or `pyproject.toml`
+file under the `requirements` key.
+
+Then, to run a specific resolver in one of these virtual environments, you can reference your virtual environment
+using the name specified in your `chalk.yaml` file in the `@before_all`, `@online`, and `@offline` decorators.
+For your `@before_all` functions, if there is no `venv` specified, the function will run for actors in every
+virtual environment. Otherwise, if there is a `venv` specified, the function will only run for actors in the specified
+virtual environment. Otherwise, `@online` and `@offline` resolvers will default to run using the default virtual
+environment, unless a different `venv` is specified.
+
+```python
+from chalk import before_all, online, offline, Features
+from src.models import User
+
+# this will run for all actors in all venvs
+@before_all()
+def before_all_hook():
+    from services import msvc
+
+    msvc_client = msvc.Client()
+
+# runs for actors **only** in specified venv
+@before_all(venv="model-1")
+def before_all_model_1():
+    from models import Model1
+
+    model_1 = Model1.load()
+
+# runs for actors **only** in specified venv
+@before_all(venv="model-2")
+def before_all_model_2():
+    from models import Model2
+
+    model_2 = Model2.load()
+
+# runs using default venv
+@online
+def get_user_email_domain(
+    email: User.email
+) -> Features[User.email_handle, User.email_domain]:
+    handle, domain = email.split("@")
+    return User(email_handle=handle, email_domain=domain)
+
+# runs using model-1 venv
+@online(venv="model-1")
+def get_user_risk_score_1(
+    id: User.id,
+    email_domain: User.email_domain,
+    recent_activity_count: User.recent_activity_count["7d"]
+) ->User.risk_score_1:
+    return model_1.predict(id, email_domain, recent_activity_count)
+
+# runs using model-2 venv
+@online(venv="model-2")
+def get_user_risk_score_2(
+    id: User.id,
+    email_domain: User.email_domain,
+    recent_activity_count: User.recent_activity_count["7d"]
+) -> User.risk_score_2:
+    return model_2.predict(id, email_domain, recent_activity_count)
+
 ```
 
 ---
