--- a/configuration.mdx
+++ b/configuration.mdx
@@ -324,6 +324,7 @@ venvs:
         - scikit-learn==1.7.2
         - tensorflow==2.20.0
         - torch
+        - transformersx
     model-2:
       requirements: ./requirements-model-2.txt
 ```
@@ -334,8 +335,8 @@ file under the `requirements` key.
 
 Then, to run a specific resolver in one of these virtual environments, you can reference your virtual environment
 using the name specified in your `chalk.yaml` file in the `@before_all`, `@online`, and `@offline` decorators.
-For your `@before_all` functions, if there is no `venv` specified, the function will run for actors in every
-virtual environment. Otherwise, if there is a `venv` specified, the function will only run for actors in the specified
+For your `@before_all` functions, if there is no `venv` specified, the function will run in every
+virtual environment. Otherwise, if there is a `venv` specified, the function will only run in the specified
 virtual environment. Otherwise, `@online` and `@offline` resolvers will default to run using the default virtual
 environment, unless a different `venv` is specified.
 
@@ -343,21 +344,21 @@ environment, unless a different `venv` is specified.
 from chalk import before_all, online, offline, Features
 from src.models import User
 
-# this will run for all actors in all venvs
+# this will run in all venvs
 @before_all()
 def before_all_hook():
     from services import msvc
 
     msvc_client = msvc.Client()
 
-# runs for actors **only** in specified venv
+# runs **only** in specified venv
 @before_all(venv="model-1")
 def before_all_model_1():
     from models import Model1
 
     model_1 = Model1.load()
 
-# runs for actors **only** in specified venv
+# runs **only** in specified venv
 @before_all(venv="model-2")
 def before_all_model_2():
     from models import Model2
@@ -379,7 +380,8 @@ def get_user_risk_score_1(
     email_domain: User.email_domain,
     recent_activity_count: User.recent_activity_count["7d"]
 ) ->User.risk_score_1:
-    return model_1.predict(id, email_domain, recent_activity_count)
+    weights = msvc_client.get_weights("model-1")
+    return model_1.predict(id, email_domain, recent_activity_count, weights)
 
 # runs using model-2 venv
 @online(venv="model-2")
@@ -388,7 +390,8 @@ def get_user_risk_score_2(
     email_domain: User.email_domain,
     recent_activity_count: User.recent_activity_count["7d"]
 ) -> User.risk_score_2:
-    return model_2.predict(id, email_domain, recent_activity_count)
+    weights = msvc_client.get_weights("model-2")
+    return model_2.predict(id, email_domain, recent_activity_count, weights)
 
 ```
 
