--- a/architecture.mdx
+++ b/architecture.mdx
@@ -156,9 +156,12 @@ You would typically run only one Management Plane to orchestrate all Data Planes
 
 ## Monitoring
 
-Native integrations with PagerDuty and Slack ensure teams are immediately alerted to any issues in their feature pipelines.
+Native integrations with PagerDuty and Slack ensure teams are immediately alerted to any issues
+in their feature pipelines.
 
-Beyond alerting, every Chalk query is fully instrumented with traces and detailed logs, enabling both broad system-wide monitoring and deep request-level debugging across every stage of computation—down to the root data source.
+Beyond alerting, every Chalk query is fully instrumented with traces and detailed logs, enabling
+both broad system-wide monitoring and deep request-level debugging across every stage of
+computation—down to the root data source.
 With Chalk, data teams get
 
 - Comprehensive logging & debugging
@@ -186,8 +189,15 @@ This flexibility to configure and define your own metrics makes it easy to answe
 
 ## Architecting maintainable and scalable systems for enterprise success
 
-By both connecting to your data stores directly and computing features post-fetch, Chalk makes it trivial to integrate new data sources from other teams, dramatically increasing predictive accuracy and the context available to your models.
+By both connecting to your data stores directly and computing features post-fetch, Chalk makes it
+trivial to integrate new data sources from other teams, dramatically increasing predictive
+accuracy and the context available to your models.
 
-Your systems can also bidirectionally integrate with Chalk's underlying infrastructure, which is built on widely-adopted technologies like Redis, DynamoDB, or Postgres and leverages open standards like Arrow, Parquet, and Iceberg—ultimately maximizing compatibility and unlocking downstream analytical workflows
+Your systems can also bidirectionally integrate with Chalk's underlying infrastructure, which
+is built on widely-adopted technologies like Redis, DynamoDB, or Postgres and leverages open
+standards like Arrow, Parquet, and Iceberg—ultimately maximizing compatibility and unlocking
+downstream analytical workflows
 
-Together, these architectural choices enable enterprises to build future-proof ML and AI systems that scale with their needs, maintain interoperability, and seamless integrate with their existing technology stack.
+Together, these architectural choices enable enterprises to build future-proof ML and AI systems
+that scale with their needs, maintain interoperability, and seamlessly integrate with their
+existing technology stack.
