--- a/changelog.mdx
+++ b/changelog.mdx
@@ -6,6 +6,18 @@ description: Updates to Chalk!
 published: true
 ---
 
+## September 10, 2025
+
+### Chalk's log explorer
+
+
+
+### Chalk developer experience improvements
+
+- Improved our support for querying features with has-many relationships in the Chalk dashboard's Data Explorer.
+- Added support for aggregating over Vector types (sum, mean)
+- Added a new windowed aggregation (`approx_top_k`), for computing an approximation of the most common values in a field. Takes in a required `k` parameter, such as `approx_top_k(k=5)` for the five approximately-most common values.
+
 ## July 30, 2025
 
 ### Chalk diff viewer
